Allow categories to be clickable in search filter

--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -13,7 +13,7 @@ block content
     .col-md-6.category-filter
       .glyphicon.glyphicon-triangle-right
       | Categories
-      div
+      .skill-select
         each skill in current_user_interests
           .skill-label #{skill.label}
     .col-md-6.range-filter
