--- a/views/partials/userCard.jade
+++ b/views/partials/userCard.jade
@@ -13,4 +13,4 @@
       each skill in card_user.skills.slice(0, 5)
         .skill-label #{skill.label}
   .card-footer
-    .action-calls(data-toggle="modal", data-target="#requestModal", data-name="#{card_user.profile.name}" data-id="#{card_user.id}" data-skills=card_user.skills) Request me
+    button.btn.btn-success.action-calls(data-toggle="modal", data-target="#requestModal", data-name="#{card_user.profile.name}" data-id="#{card_user.id}" data-skills=card_user.skills) Request me
