We don't need a separate 'Home' entry in sidebar
Just make the Bazaar text link to home

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -2,10 +2,8 @@
 #sidebar-wrapper
   ul.sidebar-nav
     li.sidebar-brand
-      a(href='#')
+      a(href='/')
         | Bazaar
-    li
-      a(href='/') Home
     if user
       li
         a(href='/transactions') Wallet
