Add account settings to sidebar

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -9,6 +9,8 @@
         a(href='/transactions') Wallet
       li
         a(href='/profile/#{user.id}') Profile
+      li
+        a(href='/profile/account') Settings
     li
       a(href='/contact') Contact
     li
