Add route to show bookmarks

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -10,6 +10,8 @@
       li
         a(href='/profile/#{user.id}') Profile
       li
+        a(href='/bookmarks') Bookmarks
+      li
         a(href='/profile/account') Settings
     li
       a(href='/contact') Contact
