Show reviews on profile page
Since we changed the schema of transaction to have
reviews be separate, we need to change the controller
code for how they are shown on profile page.

--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -35,14 +35,14 @@ block content
       .col-md-12
         .box
           h3 Reviews
-          each transaction, i in transactions
+          each review, i in reviews
             .review
               .rating
                 - var num = 0
-                while num < transaction.review.rating
+                while num < review.rating
                   span ★
                   - num++
-              quote= transaction.review.text
+              quote= review.text
             hr
 
   script(src='/js/profile.js')
