Fix route for settings page

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -12,7 +12,7 @@
       li
         a(href='/bookmarks') Bookmarks
       li
-        a(href='/profile/account') Settings
+        a(href='/account') Settings
     li
       a(href='/contact') Contact
     li
