Fix account page layout
Since the rebase they started using col-sm-3
instead of col-sm-3 so we have to update ours
too.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -273,6 +273,11 @@ textarea {
 
 // Account page
 
+.account-page {
+  width: 75%;
+  margin: 0 auto;
+}
+
 input.activity-checkbox {
   margin-right: 10px;
 }
