Add logout link in sidebar

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -17,4 +17,8 @@
       a(href='/contact') Contact
     li
       a(href='/about') About
+    if user
+      li
+        a(href='/logout') Logout
+
 link(rel='stylesheet', href='/css/sidebar.css')
