--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -3,6 +3,7 @@
 @import "lib/bootstrap/bootstrap";
 @import "lib/bootstrap-social";
 @import "lib/font-awesome/font-awesome";
+@import "lib/bootstrap-slider.min.css";
 
 @import "themes/flatly/flatly";
 
@@ -131,6 +132,13 @@ textarea {
   .category-filter, .range-filter {
     padding-top: 1%;
     padding-bottom: 1%;
+  }
+
+  .range-filter {
+    text-align: center;
+    #distance-slider {
+      margin-left: 12px;
+    }
   }
   padding-bottom: 1%;
 
