--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -17,8 +17,8 @@ block content
         each skill in current_user_interests
           .skill-label(name="#{skill.name}") #{skill.label}
     .col-md-6.range-filter
-      | Distance
-      input(type='range', min='0', max='20')
+      label Distance
+      input#distance-slider(data-slider-id='distance-slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="10")
     .col-md-12
       .button-wrapper
         button.btn.btn-primary.btn-large.filter-button(type='submit') Apply filter
