--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -1,8 +1,8 @@
 .navbar.navbar-default.navbar-fixed-top
   .container-fluid
     a.navbar-brand(href='/')
-      i.fa.fa-cube
-      | Bazaar
+      img(width=20 src='/images/logo.png')
+      span.brand-title Bazaar
     input.search-box(placeholder="Search for skills...")
     span.glyphicon.glyphicon-search.white
     button.navbar-toggle(id='menu-toggle' type='button')
