--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -8,9 +8,9 @@
       .modal-body
         .container-fluid
           .row
-            .col-xs-4.service-type Learn
-            .col-xs-4.service-type Share
-            .col-xs-4.service-type Exchange
+            .col-xs-4.service-type(name=RequestType.LEARN) Learn
+            .col-xs-4.service-type(name=RequestType.SHARE) Share
+            .col-xs-4.service-type(name=RequestType.EXCHANGE) Exchange
         form.profile-request-form
           #request-recipient(style="display:none;" recipient)
           .form-group
