Distance slider has 'inactive' option
If the slider is set to max, no distance filter will
be applied.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -148,6 +148,9 @@ textarea {
     #distance-slider {
       margin-left: 12px;
     }
+    #distance-label.inactive {
+      color: gray;
+    }
   }
   padding-bottom: 1%;
 
