Fix new account scrolling
We need to put the jquery scrolling library
in the layout jade file so that it has access
to the jquery library directly.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,7 @@ html
     script(src='/js/lib/jquery-2.2.0.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/lib/jquery-ui.min.js')
+    script(src='/js/lib/jquery-scroll-to.js')
     script(src='/js/lib/imagesloaded.pkgd.min.js')
     script(src='/js/lib/masonry.pkgd.min.js')
     script(src='/js/lib/ckeditor/ckeditor.js')
