--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -37,6 +37,6 @@ block content
         a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
           i.fa.fa-facebook
           | Sign in with Facebook
-        a.btn.btn-block.btn-google-plus.btn-social(href='/auth/google')
+        a.btn.btn-block.btn-google.btn-social(href='/auth/google')
           i.fa.fa-google-plus
           | Sign in with Google
