Add new favicon

--- a/views/emailTemplates/message.jade
+++ b/views/emailTemplates/message.jade
@@ -1,5 +1,5 @@
 div(style='padding:5px')
-  img(style='float:left; padding-right: 4px;', width='40', src='#{base_url}/favicon.png')
+  img(style='float:left; padding-right: 4px;', width='40', src='#{base_url}/favicon.ico')
   h3(style='padding-top: 8px;') Bazaar
   div
     h4 Dear #{recipient.profile.name},
