--- a/views/emailTemplates/welcome.jade
+++ b/views/emailTemplates/welcome.jade
@@ -1,5 +1,5 @@
 div(style='padding:5px; background-color:#f8f8f8')
-  img(style='float:left; padding-right: 4px;', width='40', src='#{base_url}/favicon.png')
+  img(style='float:left; padding-right: 4px;', width='40', src='#{base_url}/favicon.ico')
   h3(style='margin-top: 8px;') Bazaar
   div(style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding-bottom:20px; text-align:center; margin: 0 auto; width: 50%;")
     h4(style='font-size:18px;') Welcome #{recipient.profile.name},
