Misc fixups to privacy policy

--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,7 +1,7 @@
 footer
   .container.text-center
-    p.pull-left © 2015 Bazaar. All Rights Reserved.
+    p.pull-left © 2016 Bazaar.
     a.pull-left(href="/privacy") &nbsp;Privacy Policy
     ul.pull-right.list-inline
       li
-        a(href='https://github.com/rmacqueen/bazaar') See the code on GitHub
+        a(href='https://github.com/shareonbazaar/bazaar') See the code on GitHub
