--- a/views/privacy.jade
+++ b/views/privacy.jade
@@ -5,7 +5,7 @@ block content
     h1 Bazaar Privacy Policy
 
     p
-      | This Privacy Policy governs the manner in which Bazaar collects, uses, maintains and discloses information collected from users (each, a "User") of the http://refugeefinder-51070.onmodulus.net/ website ("Site").
+      | This Privacy Policy governs the manner in which Bazaar collects, uses, maintains and discloses information collected from users (each, a "User") of the http://shareonbazaar.eu website ("Site").
     h3 Personal identification information
     p
       | We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, and in connection with other activities, services, features or resources we make available on our Site.Users may be asked for, as appropriate, name, email address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.
@@ -42,9 +42,10 @@ block content
       | Bazaar has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our Site, revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.
     h3 Your acceptance of these terms
     p
-      | By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This policy was generated using
-      a(href="http://privacypolicies.com", target="_blank") PrivacyPolicies.Com
+      | By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This policy was generated using&nbsp;
+      a(href="http://privacypolicies.com", target="_blank") privacypolicies.com
     h3 Contacting us
     p
-      | If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us.
+      | If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please&nbsp;
+      a(href="/contact") contact us.
     p This document was last updated on September 07, 2015
