--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -171,6 +171,7 @@ textarea {
   padding: 5px;
   margin: 3px;
   border: 1px solid black;
+  background-color: #efefef; 
   border-radius: 10px;
 }
 
