--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -5,7 +5,7 @@ block content
   input#csrf_token(type='hidden', name='_csrf', value=_csrf)
   .user-profile
     .row
-      .col-md-6
+      .col-md-6.first-box
         .box
           img.profile-pic.img-responsive.img-circle(src=spotlight_user.profile.picture)
           .bio
