Revisions based on Thorben's feedback
Mainly to the user Card

--- a/views/account/newaccount.jade
+++ b/views/account/newaccount.jade
@@ -12,9 +12,9 @@ block content
       .item#item1
         .content
           .question-content
-            .question= "Are you a refugee?"
+            .question= "Are you a newcomer?"
             .options
-              a.nav-link.status(name="refugee" href="#item2") REFUGEE
+              a.nav-link.status(name="refugee" href="#item2") NEWCOMER
               a.nav-link.status(name="native" href="#item2") LOCAL
       .item#item2
         .content
