--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -167,10 +167,10 @@ textarea {
 .skill-label {
   display: inline-block;
   padding: 5px;
-  margin: 3px;
+  margin: 5px;
   border: 1px solid black;
   background-color: #efefef;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .skill-select {
@@ -185,8 +185,9 @@ textarea {
 }
 
 .user-card {
-  padding: 4px 6px 6px 6px;
+  padding: 0px 6px 6px 6px;
   box-shadow: 1px 1px 2px gray;
+  font-family: Avenir;
 
   .bookmark {
     width: 50px;
@@ -195,7 +196,7 @@ textarea {
   }
 
   .profile-info {
-    padding: 20px;
+    padding: 10px;
     background-color: white;
 
     .profile-pic {
@@ -228,6 +229,16 @@ textarea {
       h3 {
         text-transform: uppercase;
         letter-spacing: 4px;
+        margin: 10px 0;
+      }
+
+      h4 {
+        font-size: 14px;
+      }
+
+      .distance {
+        margin: 5px 0;
+        font-size: 12px;
       }
     }
 
@@ -258,6 +269,7 @@ textarea {
 
   .about-me-note{
     padding: 0px 6px 15px 6px;
+    text-align: center;
   }
 
   .action-calls {
