--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -11,11 +11,11 @@ block content
           .form-group
             label.col-sm-3.control-label(for='first_name') First Name
             .col-sm-7
-              input.form-control(type='text', name='first_name', id='first_name', placeholder='Thorben', autofocus)
+              input.form-control(type='text', name='first_name', id='first_name', placeholder='John', autofocus)
           .form-group
             label.col-sm-3.control-label(for='last_name') Last Name
             .col-sm-7
-              input.form-control(type='text', name='last_name', id='last_name', placeholder='Stieler', autofocus)
+              input.form-control(type='text', name='last_name', id='last_name', placeholder='Doe', autofocus)
           .form-group
             label.col-sm-3.control-label(for='email') Email
             .col-sm-7
